ffmpeg: dont copy duration when -t is used Fixes Ticket445

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>